--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,50 @@
       <li><a href="#">Products</a></li>
     </ul>
     <div class="div2"><h1>Site Logo</h1></div>
-   
-    
+    <div class="div3">
+      <h2 id="h2">We Power eCommerce</h2>
+      <pr>
+        Try to think about paragraphs in terms of<br />
+        thematic unity: a paragraph isa sentence or<br />
+        a group of sentences that supports one central<br /> </pr
+      ><br />
+      <button>Learn More</button>
+    </div>
+
+    <div class="divm">
+      <div class="div1">
+        <p class="p2"></p>
+        <h2 class="p3">heading 1</h2>
+        <p>
+          in terms of thematic <br />
+          in terms of thematic
+        </p>
+        <a href="#">Learn more</a>
+      </div>
+      <div class="div1">
+        <p class="p2"></p>
+        <h2 class="p3">heading 1</h2>
+        <p>
+          in terms of thematic <br />
+          in terms of thematic
+        </p>
+        <a href="#">Learn more</a>
+      </div>
+      <div class="div1">
+        <p class="p2"></p>
+        <h2 class="p3">heading 1</h2>
+        <p>
+          in terms of thematic <br/>
+          in terms of thematic
+        </p>
+        <a href="#">Learn more</a>
+      </div>
+    </div>
+    <div class="div4">
+       <label class="lbl">Subscribe us</label> 
+        <input type="text" placeholder="Textbox">
+        <button class="sub" type="submit">Submit</button>
+
+    </div>
   </body>
 </html>
