--- a/src/index.html
+++ b/src/index.html
@@ -1,63 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>template-design-3</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <ul>
-      <li><a href="#">Company</a></li>
-      <li><a href="#">Solutions</a></li>
-      <li><a href="#">Products</a></li>
+        <li><a href="#">Company</a></li>
+        <li><a href="#">Solutions</a></li>
+        <li><a href="#">Products</a></li>
     </ul>
-    <div class="div2"><h1>Site Logo</h1></div>
+    <div class="div2">
+        <h1>Site Logo</h1>
+    </div>
     <div class="div3">
-      <h2 id="h2">We Power eCommerce</h2>
-      <pr>
-        Try to think about paragraphs in terms of<br />
-        thematic unity: a paragraph isa sentence or<br />
-        a group of sentences that supports one central<br /> </pr
-      ><br />
-      <button>Learn More</button>
+        <h2 id="h2">We Power eCommerce</h2>
+        <pr>
+            Try to think about paragraphs in terms of<br />
+            thematic unity: a paragraph isa sentence or<br />
+            a group of sentences that supports one central<br /> </pr><br />
+        <button>Learn More</button>
     </div>
 
     <div class="divm">
-      <div class="div1">
-        <p class="p2"></p>
-        <h2 class="p3">heading 1</h2>
-        <p>
-          in terms of thematic <br />
-          in terms of thematic
-        </p>
-        <a href="#">Learn more</a>
-      </div>
-      <div class="div1">
-        <p class="p2"></p>
-        <h2 class="p3">heading 1</h2>
-        <p>
-          in terms of thematic <br />
-          in terms of thematic
-        </p>
-        <a href="#">Learn more</a>
-      </div>
-      <div class="div1">
-        <p class="p2"></p>
-        <h2 class="p3">heading 1</h2>
-        <p>
-          in terms of thematic <br/>
-          in terms of thematic
-        </p>
-        <a href="#">Learn more</a>
-      </div>
+        <div class="div1">
+            <p class="p2"></p>
+            <h2 class="p3">heading 1</h2>
+            <p>
+                in terms of thematic <br />
+                in terms of thematic
+            </p>
+            <a href="#">Learn more</a>
+        </div>
+        <div class="div1">
+            <p class="p2"></p>
+            <h2 class="p3">heading 1</h2>
+            <p>
+                in terms of thematic <br />
+                in terms of thematic
+            </p>
+            <a href="#">Learn more</a>
+        </div>
+        <div class="div1">
+            <p class="p2"></p>
+            <h2 class="p3">heading 1</h2>
+            <p>
+                in terms of thematic <br />
+                in terms of thematic
+            </p>
+            <a href="#">Learn more</a>
+        </div>
     </div>
     <div class="div4">
-       <label class="lbl">Subscribe us</label> 
-        <input type="text" placeholder="Textbox">
-        <button class="sub" type="submit">Submit</button>
+        <label class="lbl">Subscribe us</label>
+        <input  class=" text-field" type="text" placeholder="Textbox">
+        <button class="button button2" type="submit">Submit</button>
 
     </div>
-  </body>
+    <footer>
+     
+    </footer>
+</body>
+
 </html>
