--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,10 @@
 
     </div>
     <footer>
-     
+     <div class="divf1">
+         <p>COPYRIGHT&COPY;2020</p>
+     </div>
+     <div class="divf2"> <p> CEDCOSS Technologies</p></div>
     </footer>
 </body>
 
