--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <title>template-design-3</title>
 </head>
 
-<body>
+<body><div>
     <ul>
         <li><a href="#">Company</a></li>
         <li><a href="#">Solutions</a></li>
@@ -57,7 +57,7 @@
         </div>
     </div>
     <div class="div4">
-        <label class="lbl">Subscribe us</label>
+        <label class="lbl">Subscribe Us</label>
         <input  class=" text-field" type="text" placeholder="Textbox">
         <button class="button button2" type="submit">Submit</button>
 
@@ -68,6 +68,7 @@
      </div>
      <div class="divf2"> <p> CEDCOSS Technologies</p></div>
     </footer>
+    </div>
 </body>
 
 </html>
